menu collapse fix

--- a/sass/main-400w.scss
+++ b/sass/main-400w.scss
@@ -21,7 +21,7 @@
   .content {
     .hero {
       background-size: contain;
-      min-height: 150px;
+      min-height: 180px;
     }
 
     .weather {
